--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -30,6 +30,20 @@
             //                              // 你需要单独配置这个 task
         },
         {
+            "type": "lldb", // 调试器类型，对应 CodeLLDB 扩展
+            "request": "launch", // 启动调试会话
+            "name": "Debug diem-node", // 在 VS Code 调试面板中显示的名称
+            "program": "${workspaceFolder}/src/diem_fuzz/target/debug/diem-node", // 要执行的主程序路径
+            "args": [ // 传递给主程序的命令行参数
+                "-f", "${workspaceFolder}/src/diem_fuzz/tmp/1/node.yaml",
+            ],
+            "cwd": "${workspaceFolder}", // 程序的工作目录，通常设置为项目根目录
+            "sourceLanguages": ["rust"], // 指定源代码语言为 Rust，有助于调试器正确解析 Rust 符号
+            "stopOnEntry": false, // 是否在程序入口处停止。如果想在main函数开始时暂停，可以设为 true
+            // "preLaunchTask": "cargo build" // 在启动调试前执行的 task，确保程序是最新的 debug 版本
+            //                              // 你需要单独配置这个 task
+        },
+        {
             // 这是一个辅助配置，用于单独调试 diem-node，如果需要的话
             "type": "lldb",
             "request": "launch",
